fix banner image z-index

--- a/src/components/HeroBanner/HeroBanner.module.scss
+++ b/src/components/HeroBanner/HeroBanner.module.scss
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 
     h1 {
       color: white;
